# ppsc-paper-bank

./: .env.example  .gitignore  AUTO_DETECTION_IMPLEMENTATION_COMPLETE.md  DYNAMIC_CATEGORIES_IMPLEMENTATION.md  Frontend_Live_Tracking.md  Live_Tracking_Architecture.md  MODELS_README.md  MULTI_WEBSITE_SUPPORT.md  README.md  RECENT_UPDATES.md  START_SERVICE_SUMMARY.md  URLS_COLLECTOR_SUMMARY.md  URL_COLLECTOR_USAGE.md  agent_service.py  agent_sessions.db  batch_test.sh  check_database.py  check_database_json.py  check_tables.py  computer_mcqs.html  create_admin.py  create_subjectwise.py  debug_individual_services.py  debug_pakmcqs.py  docker-compose.yml  flush_database.py  flush_db.py  main.py  mcp_server.py  mcq.db  mcq_features_spec.md  migrate_enum.py  passenger_wsgi.py  pyproject.toml  requirements.txt  run_start_service.py  run_test.bat  run_website_service.py  seed.py  startup.sh  (+20 more)
.github/workflows/: master_ppsc.yml
app/: database.py  security.py  settings.py
app/models/: __init__.py  base.py  category.py  community.py  interview.py  learning.py  mcq.py  mcqs_bank.py  paper.py  scraping_state.py  session.py  side_bar.py  suggestion.py  top_bar.py  (+3 more)
docs/: category-api.md
ppsc_agents/: __init__.py  agent_system.py  api_key_rotator.py  offline_model.py
tests/: README.md  conftest.py  test_auto_detection.py  test_collector.py  test_discovery_system.py  test_duplicate_prevention.py  test_dynamic_categories.py  test_enhanced_system.py  test_explanations.py  test_five_plus_options.py  test_mcq.py  test_mysql.py  test_optimization.py  test_pakmcqs.py  test_pakmcqs_json.py  test_testpoint_five_plus_options.py  test_updated_collector.py  test_website_tracking.py  test_workflow.py
(+44 files in other folders)
