[tool.poetry]
name = "ppsc-paper-bank"
version = "0.1.0"
description = "A FastAPI-based MCQ power bank system"
authors = ["User"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "main.py" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
sqlmodel = "^0.0.24"
python-dotenv = "^1.1.0"
uvicorn = "^0.34.2"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
aiosqlite = "^0.21.0"
psycopg2 = "^2.9.10"
asgiref = "^3.8.1"
pymysql = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
pytest-asyncio = "^0.23.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
